refactor: resolve url deprecation warning